tooltip added to total transfers

--- a/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
+++ b/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
@@ -22,7 +22,7 @@
       letter-spacing: 1px;
       text-transform: uppercase;
     }
-    .tot-transafers-tag{
+    .tot-transfers-tag{
       background-color: white;
       opacity: 0.6;
       color:$blue-900;
