--- a/app/views/web/ost/index/_latest_transactions.erb
+++ b/app/views/web/ost/index/_latest_transactions.erb
@@ -10,9 +10,11 @@
     <div class = "transactions-tab-screen">
     <div class="row py-4 px-4 transaction-header">
       <div class=" live-transaction font-weight-bold mr-auto"> LIVE TRANSACTIONS </div>
-      <div class=" tot-transafers-tag ml-auto px-2 ">
+      <div class=" tot-transfers-tag ml-auto px-2 ">
         <span class="font-weight-normal"> Total Transfers : </span>
-        <span id="total-transfers" class="font-weight-bold"> </span>
+        <span class="original-value" data-toggle="tooltip" data-placement="top" title=''>
+          <span id="total-transfers" class="font-weight-bold"> </span>
+        </span>
       </div>
     </div>
     <div class="transaction-list position-relative">
