--- a/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
+++ b/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
@@ -78,6 +78,19 @@
 
       }
     }
+    .elementToFadeInAndOut {
+      background-color: rgba(251, 215, 100, 1);
+      -webkit-animation: fadeinout 2s linear forwards;
+      animation: fadeinout 2s linear forwards;
+    }
+    @-webkit-keyframes fadeinout {
+      0%,100% { background-color: rgba(251, 215, 100, 0); }
+      25% { background-color: rgba(251, 215, 100, 1); }
+    }
+    @keyframes fadeinout {
+      0%,100% { background-color: rgba(251, 215, 100, 0); }
+      25% { background-color: rgba(251, 215, 100, 1); }
+    }
   }
 }
 .tooltip{
