jumbotron email subscription UI

--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -7,7 +7,7 @@
 
   <div class="container content-z-index">
 
-    <div class="row pt-4 pt-md-6">
+    <div class="row pt-4 pt-lg-6 pb-md-6 pb-xl-0">
 
       <div class="position-absolute d-none d-lg-block"
            style="top: 7%;left: 39%;transform: rotate(-10deg);height: 100%;max-width: 360px;" >
