--- a/app/views/web/ost/index/_latest_transactions.erb
+++ b/app/views/web/ost/index/_latest_transactions.erb
@@ -9,7 +9,7 @@
   <div class="transactions-tab-screen-container " >
     <div class = "transactions-tab-screen">
     <div class="row py-4 px-4 transaction-header">
-      <div class=" live-transaction font-weight-bold mr-auto"> LIVE TRANSACTIONS </div>
+      <div class=" live-transaction font-weight-bold mr-auto"> LIVE TOKEN Transfers </div>
       <div class=" tot-transfers-tag ml-auto px-2 ">
         <span class="font-weight-normal"> Total Transfers : </span>
         <span class="total-transfers-original-value" data-toggle="tooltip" data-placement="top" title=''>
