--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -2,7 +2,7 @@
     <div class="container content-z-index">
       <div class="row">
 
-        <div class="col-12 col-lg-5 mr-auto pt-4 side-by-side-1-desc">
+        <div class="col-12 col-lg-5 mr-auto pt-4 side-by-side-1-desc pt-lg-5">
           <h5 class="header-title blue side-by-side text-capitalize">Add Micro-Transactions to Your App</h5>
           <p class="mt-3 desc blue">
             OST Platform provides all the tools you need to start integrating cryptocurrency micro-transactions.
