--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -347,10 +347,13 @@ h1, h2, h3, h4, h5, h6{
   }
 
   .background-1 {
-
-      background-image: linear-gradient(-5deg, transparent 40%, #34445b 40.2%);
-
-
+    background-image: linear-gradient(-4deg, transparent 5%, #34445b 5.2%);
+    @media (min-width: map-get($grid-breakpoints, "sm") ){
+      background-image: linear-gradient(-4deg, transparent 15%, #34445b 15.2%);
+    }
+    @media (min-width: map-get($grid-breakpoints, "lg") ){
+      background-image: linear-gradient(-5deg, transparent 36%, #34445b 36.2%);
+    }
   }
 
   .background-2{
