--- a/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
+++ b/app/assets/stylesheets/web/ost/index/LatestTransactions.scss
@@ -80,6 +80,7 @@
       }
     }
     .elementToFadeInAndOut {
+      background-color: rgba(211, 227, 229, 1);
       -webkit-animation: fadeinout 2s linear forwards;
       animation: fadeinout 2s linear forwards;
     }
