--- a/app/views/web/ost/index/_latest_transactions.erb
+++ b/app/views/web/ost/index/_latest_transactions.erb
@@ -11,7 +11,7 @@
     <div class="row py-4 px-4 transaction-header">
       <div class=" live-transaction font-weight-bold mr-auto"> LIVE TOKEN Transfers </div>
       <div class=" tot-transfers-tag ml-auto px-2 ">
-        <span class="font-weight-normal"> Total Transfers : </span>
+        <span class="font-weight-normal"> Total : </span>
         <span class="total-transfers-original-value" data-toggle="tooltip" data-placement="top" title=''>
           <span id="total-transfers" class="font-weight-bold"> </span>
         </span>
