--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -402,7 +402,7 @@ h1, h2, h3, h4, h5, h6{
 
     .polygon-1 {
       background-image: linear-gradient(-5deg, transparent 40%, #438bad 40.2%);
-      bottom: 0;
+      bottom: -5%;
       right: 0;
       -webkit-clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
       clip-path: polygon(88% 13%, 100% 33%, 100% 100%, 46% 100%);
