fallbackImage image for ost HP

--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -74,13 +74,13 @@
       </div>
         <div class="col-lg-6 text-lg-center text-left pt- pt-lg-0">
           <%= render :partial => "/web/ost/index/latest_transactions" %>
-<!--          <div class="row fallbackImage d-none d-lg-none align-items-end align-items-md-enter justify-content-end" >-->
-<!--            <img class="img-fluid responsively-lazy ost-home-web-img"-->
-<!--                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"-->
-<!--                 data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"-->
-<!--                 srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
-<!--                 alt="OST - Deploy Your Brand Currency"/>-->
-<!--          </div>-->
+          <div class="row fallbackImage d-none d-lg-none align-items-end align-items-md-enter justify-content-end" >
+            <img class="img-fluid responsively-lazy ost-home-web-img"
+                   src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+                 data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-deploy-new-2.png"
+                 srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+                 alt="OST - Deploy Your Brand Currency"/>
+          </div>
         </div>
     </div>
   </div>
