fading effect on new transactions

--- a/app/views/web/ost/index/_latest_transactions.erb
+++ b/app/views/web/ost/index/_latest_transactions.erb
@@ -6,7 +6,7 @@
       </switch>
     </svg>
   </div>
-  <div class="transactions-tab-screen-container " >
+  <div class="transactions-tab-screen-container responsively-lazy" >
     <div class = "transactions-tab-screen">
     <div class="row py-4 px-4 transaction-header">
       <div class=" live-transaction font-weight-bold mr-auto"> LIVE TOKEN Transfers </div>
