--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,7 +1,9 @@
 <%= render :partial => "/web/ost/index/uber_banner" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron-new" %>
+<%= render :partial => "/web/ost/index/justTriPartial"%>
 <%= render :partial => "/web/ost/index/side_by_side_1" %>
+<%= render :partial => "/web/ost/index/side_by_side_1_mobile" %>
 <%#= render :partial => "/web/ost/index/side_by_side_2" %>
 <%#= render :partial => "/web/ost/index/side_by_side_3" %>
 <%#= render :partial => "/web/ost/index/side_by_side_4" %>
