--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -1,15 +1,23 @@
-<section class="container-jumbotron microtransaction-section pb-6 position-relative ">
-    <div class="container content-z-index">
-      <div class="row">
+<section class="prototypes-section py-4 position-relative mx-auto d-none d-lg-block" >
 
-        <div class="col-12 col-lg-5 mr-auto pt-4 side-by-side-1-desc pt-lg-5">
-          <h5 class="header-title blue side-by-side text-capitalize">Add Micro-Transactions to Your App</h5>
-          <p class="mt-3 desc blue">
-            OST Platform provides all the tools you need to start integrating cryptocurrency micro-transactions.
-          </p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="text-link" title="Get Started">Explore OST Platform</a>
-        </div>
-
-      </div>
+  <div class="container-fluid">
+    <div id="prototypes-carousal">
+      <iframe class="iframe-dimensions"  width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
     </div>
+  </div>
+
+
 </section>
+<% content_for :end_js do %>
+  <script type="text/javascript">
+    (function () {
+      ost.carousel.prototypes.init();
+    })()
+  </script>
+<%end%>
