--- a/app/views/web/ost/index/_side_by_side_1_mobile.erb
+++ b/app/views/web/ost/index/_side_by_side_1_mobile.erb
@@ -1,10 +1,37 @@
 <div id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile">
-  <div class="snap-container">
-    <li style="background-color: white" class="edge-element-first"> one</li>
-    <li style="background-color: antiquewhite" class="edge-element-first"> two</li>
-    <li style="background-color: aquamarine" class="edge-element-last"> three</li>
+  <div class="snap-container ">
+    <ul class="pl-0 prototype-list">
+    <li style="background-color: white; display: none" class="edge-element-first">
+      <div class="proto-wrapper">
+        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
 
+    </li>
+    <li style="background-color: black ; display: none" >
+      <div class="proto-wrapper">
+        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
 
+    </li>
+    <li style="background-color:azure; display: none " >
+      <div class="proto-wrapper">
+        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+    </li>
+    <li style="background-color: antiquewhite; display: none" >
+      <div class="proto-wrapper">
+        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+    </li>
+    <li style="background-color: #adb5bd; display: none" class="edge-element-last">
+      <div class="proto-wrapper">
+        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+
+    </li>
+    </ul>
   </div>
 
 </div>
