--- a/app/views/web/ost/index/_side_by_side_1_mobile.erb
+++ b/app/views/web/ost/index/_side_by_side_1_mobile.erb
@@ -1,37 +1,44 @@
 <div id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile">
-  <div class="snap-container ">
-    <ul class="pl-0 prototype-list">
-    <li style="background-color: white; display: none" class="edge-element-first">
-      <div class="proto-wrapper">
+  <div class="snap-container">
+    <ul class="pl-0 prototype-list ">
+    <li style="background-color: white; display: none" class="edge-element-first m-2 mt-4">
+      <div class="proto-wrapper position-relative mx-auto py-3">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
         <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </li>
-    <li style="background-color: black ; display: none" >
-      <div class="proto-wrapper">
+    <li style="background-color: white ; display: none" class="m-2 mt-4">
+      <div class="proto-wrapper position-relative mx-auto py-3">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
         <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </li>
-    <li style="background-color:azure; display: none " >
-      <div class="proto-wrapper">
+    <li style="background-color:white; display: none " class="m-2 mt-4">
+      <div class="proto-wrapper position-relative mx-auto py-3">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
         <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </li>
-    <li style="background-color: antiquewhite; display: none" >
-      <div class="proto-wrapper">
+    <li style="background-color: white; display: none" class="m-2 mt-4">
+      <div class="proto-wrapper position-relative mx-auto py-3">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
         <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </li>
-    <li style="background-color: #adb5bd; display: none" class="edge-element-last">
-      <div class="proto-wrapper">
-        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      </div>
+<!--    <li style="background-color: white; display: none" class="edge-element-last m-2 mt-4">-->
+<!--      <div class="proto-wrapper mx-auto py-3">-->
+<!--        <iframe class="iframe-dimensions-mobile"  src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>-->
+<!--      </div>-->
 
-    </li>
+<!--    </li>-->
     </ul>
+  </div>
+  <div class="row my-4" style="height: 47px">
+    <button id="view-more-prototypes" class="btn btn-primary mx-auto ">View more</button>
   </div>
 
 </div>
