--- a/app/views/web/ost/index/_side_by_side_1.erb
+++ b/app/views/web/ost/index/_side_by_side_1.erb
@@ -2,13 +2,34 @@
 
   <div class="container-fluid">
     <div id="prototypes-carousal">
-      <iframe class="iframe-dimensions"  width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
-      <iframe class="iframe-dimensions" width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="iframe-wrapper position-relative">
+<!--        <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="25" height="25"/>-->
+        <iframe class="iframe-dimensions"   width="438" height="930" src="//invis.io/QYTQHP57M93" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
   </div>
 
