--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -26,50 +26,50 @@
 <!--          <a href="<%#= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-white-border  my-2 ml-sm-3" title="<%#=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%#= ost_home_page_jumbotron[0]['sec_btn_title']%></a>-->
         <%#end%>
 
-        <form class="ost-form mt-5 text-left" id="home-subscribe-form">
-            <div class="input-group mb-2">
-              <input type="email" class="form-control home-subscribe-form py-2" autocomplete="off" name="email" id="home-subscribe-form-email" placeholder="Enter email for OST Wallet" >
-              <button class="btn btn-primary input-group-append px-3 align-items-center d-none d-md-block text-uppercase home-subscribe-form-submit" type="submit" title="TRY NOW"  data-jsonp="<%= GlobalConstant::Email.subscribe_url %>">
-                Try Now
-              </button>
-            </div>
-            <div class="error email-error"></div>
-            <div class="form-group m-0 mx-auto checkbox-section mt-1" style="display : none ; ">
-              <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
-                <div>
-                  <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
-                  <div class="checkbox">
-                    <svg width="18px" height="18px" viewBox="0 0 20 20">
-                      <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
-                      <polyline points="4 11 8 15 16 6"></polyline>
-                    </svg>
-                  </div>
-                </div>
-                <span class="font-weight-normal info-text ost-nav-link">
-                  I agree to receive updates on OST Wallet and other OST Products
-                </span>
-              </label>
-              <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
-            </div>
-            <button class="btn btn-primary input-group-append px-3 py-2 align-items-center d-md-none my-3 mb-5 mx-auto rounded text-uppercase home-subscribe-form-submit" type="submit" title="TRY NOW" data-jsonp="<%= GlobalConstant::Email.subscribe_url %>">
-              Try Now
-            </button>
-          <div id="submitting-email-state" style="display:none">
-            <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="15" height="15"/>
-            <span class=" small-desc d-inline"> Submitting...</span>
-          </div>
-          <div id="subscribe-success-wallet-app" style="display: none">
-            <svg class="icon d-inline align-middle" style="width:15px; height: 15px">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon-email-capture">
-                </use>
-              </switch>
-            </svg>
-            <span class="small-desc d-inline align-middle">Success! Please check your email for further details.</span>
-          </div>
-            <div class="error general_error"></div>
+<!--        <form class="ost-form mt-5 text-left" id="home-subscribe-form">-->
+<!--            <div class="input-group mb-2">-->
+<!--              <input type="email" class="form-control home-subscribe-form py-2" autocomplete="off" name="email" id="home-subscribe-form-email" placeholder="Enter email for OST Wallet" >-->
+<!--              <button class="btn btn-primary input-group-append px-3 align-items-center d-none d-md-block text-uppercase home-subscribe-form-submit" type="submit" title="TRY NOW"  data-jsonp="<%#= GlobalConstant::Email.subscribe_url %>">-->
+<!--                Try Now-->
+<!--              </button>-->
+<!--            </div>-->
+<!--            <div class="error email-error"></div>-->
+<!--            <div class="form-group m-0 mx-auto checkbox-section mt-1" style="display : none ; ">-->
+<!--              <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">-->
+<!--                <div>-->
+<!--                  <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">-->
+<!--                  <div class="checkbox">-->
+<!--                    <svg width="18px" height="18px" viewBox="0 0 20 20">-->
+<!--                      <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>-->
+<!--                      <polyline points="4 11 8 15 16 6"></polyline>-->
+<!--                    </svg>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <span class="font-weight-normal info-text ost-nav-link">-->
+<!--                  I agree to receive updates on OST Wallet and other OST Products-->
+<!--                </span>-->
+<!--              </label>-->
+<!--              <div class="error confirmation_error" data-for="subscribe_confirmation"></div>-->
+<!--            </div>-->
+<!--            <button class="btn btn-primary input-group-append px-3 py-2 align-items-center d-md-none my-3 mb-5 mx-auto rounded text-uppercase home-subscribe-form-submit" type="submit" title="TRY NOW" data-jsonp="<%#= GlobalConstant::Email.subscribe_url %>">-->
+<!--              Try Now-->
+<!--            </button>-->
+<!--          <div id="submitting-email-state" style="display:none">-->
+<!--            <img src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="15" height="15"/>-->
+<!--            <span class=" small-desc d-inline"> Submitting...</span>-->
+<!--          </div>-->
+<!--          <div id="subscribe-success-wallet-app" style="display: none">-->
+<!--            <svg class="icon d-inline align-middle" style="width:15px; height: 15px">-->
+<!--              <switch>-->
+<!--                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon-email-capture">-->
+<!--                </use>-->
+<!--              </switch>-->
+<!--            </svg>-->
+<!--            <span class="small-desc d-inline align-middle">Success! Please check your email for further details.</span>-->
+<!--          </div>-->
+<!--            <div class="error general_error"></div>-->
 
-        </form>
+<!--        </form>-->
 
       </div>
         <div class="col-lg-6 text-lg-center text-left pt- pt-lg-0">
