--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -220,49 +220,54 @@
       </ul>
 
       <div class="d-none d-md-inline ml-auto" style="font-size: 0">
-        <ul class="p-0 m-0">
-          <li>
-            <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" rel="noopener noreferrer nofollow" target="_blank" title="OST - Podcast">
-              <span class="header-social-podcast-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://t.me/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Telegram">
-              <span class="header-social-telegram-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://twitter.com/OSTdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Twitter">
-              <span class="header-social-twitter-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Medium">
-              <span class="header-social-medium-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://www.linkedin.com/company/18209852" rel="noopener noreferrer nofollow" target="_blank" title="OST - Linkedin">
-              <span class="header-social-linkedIn-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://www.facebook.com/OST" rel="noopener noreferrer nofollow" target="_blank" title="OST - Facebook">
-              <span class="header-social-facebook-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://www.youtube.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Youtube">
-              <span class="header-social-youtube-icon"></span>
-            </a>
-          </li>
-          <li class="ml-2">
-            <a href="https://gitter.im/ostdotcom/OST-Platform" rel="noopener noreferrer nofollow" target="_blank" title="OST - Gitter">
-              <span class="header-social-gitter-icon"></span>
-            </a>
-          </li>
-        </ul>
+        <a href="" class="btn btn-primary my-2 my-md-3 px-3 py-2" title="Schedule a demo">Schedule a demo</a>
+        <a href="" class="btn btn-secondary my-2 my-md-3 px-3 py-2 ml-lg-2" title="Register">Register</a>
       </div>
+
+<!--      <div class="d-none d-md-inline ml-auto" style="font-size: 0">-->
+<!--        <ul class="p-0 m-0">-->
+<!--          <li>-->
+<!--            <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" rel="noopener noreferrer nofollow" target="_blank" title="OST - Podcast">-->
+<!--              <span class="header-social-podcast-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://t.me/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Telegram">-->
+<!--              <span class="header-social-telegram-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://twitter.com/OSTdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Twitter">-->
+<!--              <span class="header-social-twitter-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Medium">-->
+<!--              <span class="header-social-medium-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://www.linkedin.com/company/18209852" rel="noopener noreferrer nofollow" target="_blank" title="OST - Linkedin">-->
+<!--              <span class="header-social-linkedIn-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://www.facebook.com/OST" rel="noopener noreferrer nofollow" target="_blank" title="OST - Facebook">-->
+<!--              <span class="header-social-facebook-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://www.youtube.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Youtube">-->
+<!--              <span class="header-social-youtube-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li class="ml-2">-->
+<!--            <a href="https://gitter.im/ostdotcom/OST-Platform" rel="noopener noreferrer nofollow" target="_blank" title="OST - Gitter">-->
+<!--              <span class="header-social-gitter-icon"></span>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
 
     </div>
   </div>
