--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -13,12 +13,14 @@
       </label>
       <input type="checkbox" id="tm">
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
-
         <li>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Platform">Platform</a>
+          <a href="<%= GlobalConstant::Base.root_url %>solutions" class="main-nav-item" title="Solutions">Solutions</a>
+        </li>
+        <li>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="main-nav-item" title="Features">Features</a>
         </li>
 
-        <li><a href="javascript:void(0)" class="main-nav-item">Developers
+        <li><a href="javascript:void(0)" class="main-nav-item">Resources
           <label title="Toggle Drop-down" class="navbar-toggler p-0 m-0" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
         </a>
           <input type="checkbox" id="developers">
@@ -53,97 +55,24 @@
                 <span class="pl-1">API Reference</span>
               </a>
             </li>
-            <li>
-              <a href="https://gitter.im/ostdotcom/OST-Platform" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-chat-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-1">Developer Chat</span>
-              </a>
-            </li>
-            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+            <li><a href="https://github.com/orgs/ostdotcom/" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center">
               <svg class="nav-svg">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-github-icon"></use>
                 </switch>
               </svg>
               <span class="pl-1">Github</span>
-              <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler7" aria-controls="navbarToggler7" aria-expanded="false" aria-label="Toggle navigation"></label>
             </a>
-              <input type="checkbox" id="devChallenges">
-              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler7">
-                <li>
-                  <a href="https://github.com/OpenST" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
-                    <span class="pl-1">OpenSt Foundation</span>
-                  </a>
-                </li>
-                <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/orgs/ostdotcom/" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OST Github">
-                    <span class="pl-1">OST</span>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
-              <a href="<%= GlobalConstant::Base.root_url %>roadmap" class="nav-svg-link d-flex align-items-center" title="Roadmap">
+              <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Blog">
                 <svg class="nav-svg">
                   <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-roadmap-icon"></use>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-blog-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-1">Roadmap</span>
+                <span class="pl-1">Blog</span>
               </a>
-            </li>
-            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
-              <svg class="nav-svg">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-challenges-icon"></use>
-                </switch>
-              </svg>
-              <span class="pl-1">Dev Challenges</span>
-              <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler4" aria-controls="navbarToggler4" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
-              <input type="checkbox" id="devChallenges">
-              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler4">
-                <li>
-                  <a href="<%= GlobalConstant::Base.root_url %>challenges" class="nav-svg-link d-flex align-items-center" title="Alpha II Challenge">
-                    <span class="pl-1">Alpha II Challenge</span>
-                  </a>
-                </li>
-                <li class="mb-0 mb-md-2">
-                  <a href="<%= GlobalConstant::Base.root_url %>challenges-2" class="nav-svg-link d-flex align-items-center" title="Alpha III Challenge">
-                    <span class="pl-1">Alpha III Challenge</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
-              <svg class="nav-svg">
-                <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
-                </switch>
-              </svg>
-              <span class="pl-1">White Paper</span>
-              <span class="drop-icon drop-icon-right"></span>
-              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler6" aria-controls="navbarToggler6" aria-expanded="false" aria-label="Toggle navigation"></label>
-            </a>
-              <input type="checkbox" id="devChallenges">
-              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler6">
-                <li>
-                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
-                    <span class="pl-1">OpenSt Protocol</span>
-                  </a>
-                </li>
-                <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
-                    <span class="pl-1">Mosaic Protocol</span>
-                  </a>
-                </li>
-              </ul>
             </li>
           </ul>
         </li>
@@ -182,16 +111,6 @@
                   </switch>
                 </svg>
                 <span class="pl-1">News & Events</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Blog">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-blog-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-1">Blog</span>
               </a>
             </li>
             <li>
