--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -14,7 +14,7 @@
         <img src="https://dxwfxs8b4lg24.cloudfront.net/ost-kit/images/home-page/ost-platform-dots-bg@2x.png" class="img-fluid" />
       </div>
 
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-12 col-lg-6 my-auto">
         <h1 class="header-title white">Your Digital Currency Inside Your App</h1>
         <p class="mt-3 desc white">Whatever your use case, OST Platform is the fastest and easiest solution to securely integrate a Token into your application and empower end-users with a crypto wallet.</p>
 <!--        <h3 class="header-title white"><%#= ost_home_page_jumbotron[0]['jumbotron_title']%></h3>-->
@@ -24,7 +24,7 @@
 
         <div class="ml-auto" style="font-size: 0">
           <a href="" class="btn btn-primary my-2 my-md-3" title="Try Now">Try Now</a>
-          <a href="" class="btn btn-white-border my-2 my-md-3 ml-lg-3" title="Log In">Log In</a>
+          <a href="" class="btn btn-white-border my-2 my-md-3 ml-lg-3 ml-3" title="Log In">Log In</a>
         </div>
 
       </div>
@@ -43,8 +43,6 @@
 
   <div class="hp-section-bg-wrap">
     <div class="section-background background-1"></div>
-    <div class="polygon-1 section-polygon-top"></div>
-    <div class="polygon-2 section-polygon-bottom"></div>
   </div>
 
 
