--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -1,7 +1,10 @@
 <%= render :partial => "/web/ost/index/uber_banner" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron-new" %>
-<%= render :partial => "/web/ost/index/partnering_with_ost" %>
+<%= render :partial => "/web/ost/index/blockchain_bits" %>
+<%= render :partial => "/web/ost/index/pepo" %>
+<%= render :partial => "/web/ost/index/popcorn_signup" %>
+<%= render :partial => "/web/ost/index/footer_top" %>
 <%#= render :partial => "/web/ost/index/side_by_side_1" %>
 <%#= render :partial => "/web/ost/index/side_by_side_2" %>
 <%#= render :partial => "/web/ost/index/side_by_side_3" %>
