--- a/app/views/web/ost/index/_blockchain_bits.erb
+++ b/app/views/web/ost/index/_blockchain_bits.erb
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-12 col-md-4 mt-5">
           <div class="row">
-            <div class="col-12 text-left text-md-center">
+            <div class="col-12 text-center">
               <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-3@3x.png">
               <h5 class="my-3" style="color: #34445b;font-weight: 600 ">Deliver a seamless user experience to your end-users with our technology solutions</h5>
 <!--              <p class="desc">OST is the only blockchain technology solution designed for the needs of businesses with millions of customers. From branded tokens, to internet-grade scalability and high transaction throughput, to world-cass security and user-friendly wallets, OST is making blockchain work for business.</p>-->
@@ -15,7 +15,7 @@
         </div>
         <div class="col-12 col-md-4 mt-5">
           <div class="row">
-            <div class="col-12 text-left text-md-center">
+            <div class="col-12 text-center">
               <img  class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-2@3x.png">
               <h5 class="my-3" style="color: #34445b;font-weight: 600 ">Integrate fast and easily with our APIs, SDKs and extensive developer resources</h5>
 <!--              <p class="desc">Marketplaces, content driven communities, shared economy applications and any platform using micro-payments or global transfers can reach the next level when built using the easy-to-use, scalable, decentralized infrastructure that we provide.</p>-->
@@ -24,7 +24,7 @@
         </div>
         <div class="col-12 col-md-4 mt-5">
           <div class="row">
-            <div class="col-12 text-left text-md-center">
+            <div class="col-12 text-center">
               <img class="mx-auto" style="height:75px;" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/partners/partnering-with-ost-1@3x.png">
               <h5 class="my-3" style="color: #34445b;font-weight: 600 ">Make confident decisions with our Token analytics & management platform</h5>
 <!--              <p class="desc">OST partners are eligible for development grants from the OpenST Foundation. All of our signed partners are provided a blockchain strategy consultant who will be your point person and advisor as you plan and implement your branded token economy.</p>-->
